# Engi_thesis_Android_Camera_control

./: .gitattributes  .gitignore  README.md  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  androidcameracontrol.cpp  kartykamer.cpp  testmethods.cpp
app/src/main/jni/dlib_natives/: dlib_utility.cpp  dlib_utility.h
app/src/main/jni/facedetectors/: HaarCascadeDetector.cpp  HaarCascadeDetector.h  HaarCascadeDetectorNative.cpp  dlib_FaceDetectionHOG.cpp  dlib_FaceDetectionMMOD.cpp
app/src/main/jni/facemarks/: dlib_FacemarksKazemi.cpp
app/src/main/jni/landmarks/: dlib_Landmarks.cpp
demo_examples/: mruganie.avi
demo_examples/videos/: analiza_twarzy.avi  mruganie.avi
doc/: bibliografia.bib  dnn_filter_test.tex  dnn_speed_test.tex  main.tex  wyniki_gray_face.tex  wyniki_rgb_face.tex
doc/Praca Dyplomowa/: bibliografia.bib
doc/csv/: ear_both_1.csv  ear_live_blink.csv  ear_live_close.csv  ear_live_open.csv  ear_long_1.csv  ear_static_closed.csv  ear_static_open.csv
doc/eiti/: eiti-thesis.cls
doc/logs/: ear_left_1.csv  ear_long_2.csv  ear_long_3.csv  ear_right_1.csv
doc/sections/: architektura.tex  dataset.tex  detekcja_mrugania.tex  detekcja_oczu.tex  detekcja_ruchu_oczu.tex  detekcja_twarzy.tex  detekcja_zrenic.tex  ear.tex  facemarks.tex  landmarks.tex  podsumowanie.tex  porownanie_detekcji_oczu.tex  porownanie_detekcji_twarzy.tex  porownanie_detekcji_zrenic.tex  porownanie_facemarks.tex  sposob_badania.tex  stos_technologiczny.tex  streszczenie_angielskie.tex  streszczenie_polskie.tex  wstep.tex  zalacznik_1_git.tex
doc/tables/: eye_blink_live_accuracy.tex  eye_move_live_accuracy.tex  face_detection_result_dnn_speed.tex  face_detection_result_filter.tex  face_detection_result_gray.tex  face_detection_result_rgb.tex  face_detection_speed_rgb.tex
doc/tables/eye_section/: eye_detection_accuracy.tex  eye_detection_speed.tex  eye_detection_speed_live.tex  eye_facemark_size.tex  face_crop.tex
doc/tables/face_section/: face_detection_accuracy_gray.tex  face_detection_accuracy_live.tex  face_detection_accuracy_rgb.tex  face_detection_result_dnn_speed.tex  face_detection_result_filter.tex  face_detection_speed_gray.tex  face_detection_speed_live.tex  face_detection_speed_rgb.tex
doc/tables/facemark_section/: facemark_speed_live.tex  (+2 more)
gradle/: thesis.jks
gradle/wrapper/: gradle-wrapper.properties
sdk/: .gitignore  build.gradle
(+271 files in other folders)
